# option-pricing-lab

./: README.md  pyproject.toml
report/: report.tex
scripts/: convergence_binomial.py  convergence_montecarlo.py  convergence_pde.py  stability_pde.py
src/pricinglab/: analytic.py  lattice.py  montecarlo.py  pde.py
src/pricinglab.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_analytic.py  test_numerical.py
