[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pricinglab"
version = "0.1.0"
description = "Numerical methods for option pricing: stability, convergence and early exercise"
requires-python = ">=3.11"
dependencies = ["numpy", "scipy"]

[project.optional-dependencies]
dev = ["pytest", "matplotlib"]

[tool.setuptools.packages.find]
where = ["src"]